--- a/app/src/main/res/layout/fragment_encryption.xml
+++ b/app/src/main/res/layout/fragment_encryption.xml
@@ -69,17 +69,13 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="64dp" />
 
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Testing"
         android:id="@+id/inputView"
-        android:layout_below="@+id/decryptView"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/prngView"
-        android:editable="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/decryptView" />
 
 </RelativeLayout>
