Key Bank Updates. Rename and Delete work, need to get Send functioning. I will add a refresh to the ListView tonight, but for now just move to another window and come back.

--- a/app/src/main/res/layout/fragment_key_bank.xml
+++ b/app/src/main/res/layout/fragment_key_bank.xml
@@ -4,10 +4,10 @@
              android:layout_height="match_parent"
              tools:context="edu.ohio_state.smokesignal.KeyBankFragment">
 
-    <TextView
-        android:id="@+id/key_exchange_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Key Bank"/>
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/key_bank_list"
+        android:choiceMode="singleChoice"/>
 
 </FrameLayout>
