--- a/app/src/main/res/layout/fragment_key_exchange.xml
+++ b/app/src/main/res/layout/fragment_key_exchange.xml
@@ -4,19 +4,21 @@
              android:layout_height="match_parent"
              tools:context="edu.ohio_state.smokesignal.KeyExchangeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Share Key"
         android:id="@+id/keyExchangeButton"
+        android:gravity="center"
         android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/key_exchange_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:layout_height="171dp"
+        android:text="Press button to share key."
+        android:textSize="20dp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal|center" />
 
 </FrameLayout>
